# wikilynx

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  update-documentation.md
docs/: CREDITS  CREDITS.md  PRIVACY.md  ReleaseNotes
docs/deploy/: README  README.md
docs/deploy/AppImage/: AppRun  Containerfile  deploy
docs/deploy/Debian/: Containerfile  deploy
docs/deploy/RPM/: Dockerfile  deploy
docs/deploy/RPM/SPECS/: wikilynx.spec
docs/deploy/fedora39/: Dockerfile  deploy
docs/deploy/fedora39/SPECS/: wikilynx.spec
docs/deploy/fedora40/: Dockerfile  deploy
docs/deploy/fedora40/SPECS/: wikilynx.spec
docs/deploy/fedora41/: deploy
docs/deploy/fedora41/SPECS/: wikilynx.spec
docs/desktop/: in.org.dawn.wikilynx.appdata.xml  in.org.dawn.wikilynx.desktop  org.dawn.wikilynx.appdata.xml  wikilynx.appdata.xml  wikilynx.desktop
src/: CMakeLists.txt  main.cpp
src/assets/: gameData.json
src/assets/icons/blueDark/: index.theme
src/assets/icons/blueLight/: index.theme
src/assets/icons/greenDark/: index.theme
src/assets/icons/greenLight/: index.theme
src/assets/icons/monochromeLight/: index.theme
src/assets/icons/nordDark/: index.theme
src/assets/icons/orangeDark/: index.theme
src/assets/icons/redDark/: index.theme
src/assets/icons/redLight/: index.theme
src/assets/icons/yellowDark/: index.theme
src/assets/info/: COPYING.QtWebEngine.txt  LICENSE.txt
src/debian/: copyright  rules
src/game/: CMakeLists.txt  gameboi.cpp  oscillator.cpp  renovatio.cpp  scoresheet.cpp
src/game/include/: gameboi.h  oscillator.h  renovatio.h  scoresheet.h
src/ui/: CMakeLists.txt  about.cpp  basebrowser.cpp  baselist.cpp  congrats.cpp  gamewindow.cpp  getlevel.cpp  leaderboard.cpp  leveleditor.cpp  levelmanager.cpp  levels.cpp  loadingscreen.cpp  modernstarter.cpp  news.cpp  statusoverview.cpp  terms.cpp  welcome.cpp  whatsnew.cpp
src/ui/forms/: about.ui  basebrowser.ui  gamewindow.ui  leveleditor.ui  levelmanager.ui  levels.ui  loadingscreen.ui  modernstarter.ui  statusoverview.ui  terms.ui  welcome.ui
src/ui/include/: about.h  basebrowser.h  congrats.h  gamewindow.h  getlevel.h  leaderboard.h  leveleditor.h  levelmanager.h  levels.h  loadingscreen.h  modernstarter.h  news.h  welcome.h
wikiLYNX/: CMakeLists.txt  about.cpp  basebrowser.cpp  baselist.cpp  congrats.cpp  editlevel.cpp  gamewindow.cpp  getlevel.cpp  help.cpp  leaderboard.cpp  leveleditor.cpp  levelmanager.cpp  levels.cpp  loadingscreen.cpp  main.cpp  news.cpp  renovatio.cpp  scoresheet.cpp  statusoverview.cpp  terms.cpp  viewcheckpoint.cpp  viewstats.cpp  welcome.cpp  whatsnew.cpp
wikiLYNX/assets/: assets.qrc  gameData.json
wikiLYNX/assets/desktop/: wikilynx.desktop
wikiLYNX/assets/icons/materialDark/: index.theme
wikiLYNX/assets/icons/materialLight/: index.theme
wikiLYNX/assets/icons/monochromeDark/: index.theme
wikiLYNX/assets/icons/nordLight/: index.theme
wikiLYNX/assets/icons/orangeLight/: index.theme
wikiLYNX/assets/icons/yellowLight/: index.theme
wikiLYNX/assets/info/: LICENSE.txt  PRIVACY.txt
wikiLYNX/assets/pallete/: bannerPrg.plt
wikiLYNX/debian/: changelog  control  copyright  install  postinst  rules
wikiLYNX/include/: about.h  baselist.h  congrats.h  editlevel.h  gamewindow.h  getlevel.h  help.h  leaderboard.h  leveleditor.h  levelmanager.h  levels.h  loadingscreen.h  news.h  renovatio.h  scoresheet.h  statusoverview.h  terms.h  viewcheckpoint.h  viewhistory.h  viewstats.h  welcome.h  whatsnew.h
wikiLYNX/ui/: about.ui  baselist.ui  congrats.ui  editchk.ui  editlevel.ui  gamewindow.ui  getlevel.ui  help.ui  leaderboard.ui  leveleditor.ui  levelmanager.ui  levels.ui  loadingscreen.ui  news.ui  statusoverview.ui  terms.ui  viewcheckpoint.ui  viewhistory.ui  viewstats.ui  welcome.ui  whatsnew.ui
